<resources>
    <string name="app_name">Thero </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">Thero Student</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_age">Age(optional)</string>
    <string name="prompt_nickname">Nickname(optional)</string>
    <string name="prompt_verify_password">Re-enter Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up!</string>
    <string name="action_register_button">Not Registered?</string>
    <string name="error_invalid_username">Usernames should be between 6-24 characters</string>
    <string name="error_invalid_nickname">Nickname should be less than 24 characters</string>

    <string name="error_invalid_age">Select a number between 0 and 100</string>
    <string name="error_invalid_entry">Field should contain only letters and numbers </string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password should be between 6-32 characters</string>
    <string name="error_incorrect_password">Password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="double_entry">There is already an account created with this email address.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="title_activity_student_info">Student Information</string>
    <string-array name="student_teacher">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="title_activity_teacher_sign_up">Sign up</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="badDatabaseChars">.#$[\']</string>
    <string name="FirebaseWeakPassword">Password is too weak.</string>
    <string name="FirebaseNotValid">Your email or password is not valid. Please check your credentials</string>
    <string name="FirebaseDoubleEntry">There is already an account associated with that email address</string>
    <string name="title_activity_teacher_main_menu">Teacher Main Menu</string>
    <string name="addStudents">Add and organise students</string>
    <string name="organiseStudents">Assign tasks and assessments</string>
    <string name="reviewProgress">View student progress</string>
    <string name="student_double_entry">This student is already in your list!</string>
    <string name="title_activity_student_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_student_tabs">student_tabs</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="tasks_array">
        <item>Select level</item>
        <item>Level 1: Rhythm note names</item>
        <item>Level 2: Rhythm rest names</item>
        <item>Level 3: Treble Clef notes in the spaces (multi-choice)</item>
        <item>Level 4: Treble Clef notes on the spaces (touch)</item>
        <item>Level 5: Treble Clef notes on the lines (multi-choice)</item>
        <item>Level 6: Treble Clef notes on the lines (touch)</item>
    </string-array>

    <string-array name="analytics_array">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_activity_review_progress">ReviewProgressActivity</string>
    <string name="title_activity_student_tasks">StudentTasksActivity</string>
</resources>

